--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Tip Calculator</string>
+    <string name="amount_hint">$0.00</string>
+    <string name="tip_text">Tip:</string>
+    <string name="total_text">Total:</string>
+    <string name="default_percent">15%</string>
 </resources>
